--- a/src/components/APP/components/Pages/components/Services/Services.css
+++ b/src/components/APP/components/Pages/components/Services/Services.css
@@ -27,7 +27,7 @@
 }
 #Services .page__content .service {
   text-align: center;
-  padding: 0;
+  padding: 0 10px;
   margin-bottom: 30px;
 }
 #Services .page__content .service__img {
