--- a/src/components/APP/components/Header/components/Nav/components/NavItem/NavItem.css
+++ b/src/components/APP/components/Header/components/Nav/components/NavItem/NavItem.css
@@ -27,15 +27,18 @@ header nav ul li a:after {
   color: #2eca7f;
   transition: all 0.15s ease-in-out;
 }
-header nav ul li a:active {
-  opacity: 1;
+header nav ul li a:link {
+  text-decoration: none;
+  color: #49515d;
 }
-header nav ul li a:active:after {
-  width: 25px;
+header nav ul li a:visited {
+  text-decoration: none;
+  color: #49515d;
 }
 header nav ul li a:hover {
   cursor: pointer;
   text-decoration: none;
+  color: #49515d;
 }
 header nav ul li a:hover:after {
   width: 25px;
